tests/fixtures/invalid/float_bitand_none.py
# Cannot bitwise AND Float and None
x: float = 1.0 & None
